# GDS-Lens

./: .gitignore  .gitmodules  .vscodeignore  CHANGELOG.md  DEVELOPING.md  LICENCE.md  LYP_SPEC_GAPS.md  README.md  extension.cjs  extension.js  package-lock.json  package.json  viewer.html  viewer.js
docs/: rendering-rewrite.md
src/: extension.cjs  marker-parsers.js  viewer.html  viewer.js  wasm-worker.js
src/wasm/: CMakeLists.txt  bindings.cpp  gds_common.hpp  renderer.cpp
test/: marker-parsers.test.js  marker-wasm.test.js
test/fixtures/: sample.lyrdb  sample_calibre.txt  sample_calibre_hier.txt
